@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.fantasyfrc</groupId>
     <artifactId>fantasyfrc</artifactId>
-    <version>1</version>
+    <version>1</version><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>14</source><target>14</target><compilerArgs>--enable-preview</compilerArgs></configuration></plugin></plugins></build>
 
     <properties>
         <maven.compiler.source>1.12</maven.compiler.source>
